--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,21 +9,34 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">4</td><td class="num attn">3</td><td class="num attn">1</td><td class="num">56,349</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test3</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">8,390</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">Test1</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">17,657</td><td></td><td></td></tr>
+<tr><td><a href="#t2">Test2</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">72,907</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">2</th><th class="num">0</th><th class="num attn">1</th><th class="num">98,954</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">org.testng.Logintestng</td><td><a href="#m0">tc5</a></td><td rowspan="1">1662400006654</td><td rowspan="1">2428</td></tr><tr><th colspan="4">Test &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="3">org.testng.Logintestng</td><td><a href="#m1">tc5</a></td><td rowspan="3">1662399991449</td><td rowspan="3">2803</td></tr><tr class="skippedeven"><td><a href="#m2">tc5</a></td></tr><tr class="skippedeven"><td><a href="#m3">tc5</a></td></tr><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">org.testng.Logintestng</td><td><a href="#m4">tc1</a></td><td rowspan="1">1662399983847</td><td rowspan="1">5033</td></tr><tr class="passedeven"><td><a href="#m5">tc3</a></td><td rowspan="2">1662399969000</td><td rowspan="2">5382</td></tr><tr class="passedeven"><td><a href="#m6">tc3</a></td></tr><tr class="passedeven"><td><a href="#m7">tc4</a></td><td rowspan="1">1662400010674</td><td rowspan="1">4308</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test3 &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">org.testng.Crossbrowser</td><td><a href="#m0">tc1</a></td><td rowspan="1">1662474062157</td><td rowspan="1">8316</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">Test1 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">org.testng.Crossbrowser</td><td><a href="#m1">tc1</a></td><td rowspan="1">1662474062157</td><td rowspan="1">17597</td></tr></tbody>
+<tbody id="t2"><tr><th colspan="4">Test2 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">org.testng.Crossbrowser</td><td><a href="#m2">tc1</a></td><td rowspan="1">1662474062157</td><td rowspan="1">72842</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">org.testng.Logintestng#tc5</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: checking expected [true] but found [false]
-... Removed 29 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">org.testng.Logintestng#tc5</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: checking expected [true] but found [false]
-... Removed 29 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">org.testng.Logintestng#tc5</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: checking expected [true] but found [false]
-... Removed 29 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">org.testng.Logintestng#tc5</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: checking expected [true] but found [false]
-... Removed 29 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">org.testng.Logintestng#tc1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">org.testng.Logintestng#tc3</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">org.testng.Logintestng#tc3</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">org.testng.Logintestng#tc4</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test3</h2><h3 id="m0">org.testng.Crossbrowser#tc1</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>edge</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">io.github.bonigarcia.wdm.config.WebDriverManagerException: io.github.bonigarcia.wdm.config.WebDriverManagerException: msedgedriver 105.0.1343.27 for WIN 64 not found in https://msedgedriver.azureedge.net/
+	at io.github.bonigarcia.wdm.WebDriverManager.handleException(WebDriverManager.java:725)
+	at io.github.bonigarcia.wdm.WebDriverManager.manage(WebDriverManager.java:531)
+	at io.github.bonigarcia.wdm.WebDriverManager.handleException(WebDriverManager.java:722)
+	at io.github.bonigarcia.wdm.WebDriverManager.manage(WebDriverManager.java:531)
+	at io.github.bonigarcia.wdm.WebDriverManager.setup(WebDriverManager.java:277)
+	at org.utility.Baseclass.launchEdge(Baseclass.java:87)
+	at java.util.concurrent.FutureTask.run(Unknown Source)
+	at java.util.concurrent.ThreadPoolExecutor.runWorker(Unknown Source)
+	at java.util.concurrent.ThreadPoolExecutor$Worker.run(Unknown Source)
+	at java.lang.Thread.run(Unknown Source)
+Caused by: io.github.bonigarcia.wdm.config.WebDriverManagerException: msedgedriver 105.0.1343.27 for WIN 64 not found in https://msedgedriver.azureedge.net/
+	at io.github.bonigarcia.wdm.WebDriverManager.noCandidateUrlFound(WebDriverManager.java:607)
+	at io.github.bonigarcia.wdm.WebDriverManager.createUrlHandler(WebDriverManager.java:756)
+	at io.github.bonigarcia.wdm.WebDriverManager.download(WebDriverManager.java:593)
+	at io.github.bonigarcia.wdm.WebDriverManager.manage(WebDriverManager.java:525)
+	... 25 more
+... Removed 17 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test1</h2><h3 id="m1">org.testng.Crossbrowser#tc1</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>chrome</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test2</h2><h3 id="m2">org.testng.Crossbrowser#tc1</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>ff</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
